# f1-sim-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
config/: default_run_config.json
data/: feature_source.csv  model_inputs.sample.json  sample_driver_inputs.csv  team_power_units.csv  track_profiles.csv
docs/: porting-plan.md
schemas/: model_inputs.schema.json
src/: config.rs  dashboard.rs  data_sources.rs  fantasy.rs  features.rs  io.rs  lib.rs  main.rs  model.rs  openf1.rs  simulate.rs  strategy.rs
