[package]
name = "f1-sim-rust"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Rust port foundation for the F1 race simulation and fantasy projection toolkit."
license = "MIT"
repository = "https://github.com/venholm-den/f1-sim-rust"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

